<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mros_modes_observer</name>
  <version>0.0.0</version>
  <description>Implements an Observer for the system modes of Components used by mros_reasoner</description>
  <maintainer email="m.a.garzonoviedo@tudelft.nl">Mario Garzon</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>system_modes</depend>
  <depend>std_msgs</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>diagnostic_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
